feature: capability to configure lua filter per route (#24)
