# control-plane/services/route/registration/v3.go
@@ -328,6 +328,7 @@ func (p V3RequestProcessor) processGateway(gw, namespace, activeVersion string, 
 						route.StatefulSession = rule.StatefulSession.ToRouteStatefulSession(gw)
 					}
 					route.RateLimitId = rule.RateLimit
+					route.LuaFilterName = rule.LuaFilter
 				} else {
 					routeEntry.ConfigureProhibitedRoute(route, isDenied)
 				}
